...

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/new_fact_button_back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/white_button"
...
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/new_fact_text_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:gravity="center"
                    android:text="@string/new_fact_layout_title"
                    android:textSize="16sp"
                    tools:text_font="@{`raleway-regular`}" />

                <TextView
                    android:id="@+id/new_fact_text_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/new_fact_layout_subtitle"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text_font="@{`raleway-black`}" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/new_fact_text_input_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    tools:text_font="@{`raleway-regular`}">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/new_fact_text_edittext_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/new_fact_title"
                        android:inputType="textAutoCorrect|textCapSentences|textAutoComplete"
                        android:maxLines="2"
                        android:text="@={viewModel.titleFact}"
                        tools:text_font="@{`raleway-regular`}"
                        tools:watcher="@{viewModel.watcher}" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/new_fact_text_input_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    tools:text_font="@{`raleway-regular`}">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/new_fact_text_edittext_comment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/new_fact_comment"
                        android:inputType="textAutoCorrect|textCapSentences|textLongMessage"
                        android:maxLines="3"
                        android:text="@={viewModel.commentFact}"
...
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="24dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/new_fact_text_date"
                        style="@style/new_fact_date_time"
                        android:layout_weight="1"
                        android:onClick="onDateClick"
                        android:text="@{viewModel.date}"
                        tools:text="23/01/17"
                        tools:text_font="@{`raleway-medium`}"
                        tools:text_icon="@{viewModel.dateIcon}" />

                    <TextView
                        android:id="@+id/new_fact_text_time"
                        style="@style/new_fact_date_time"
                        android:layout_weight="1"
                        android:onClick="onTimeClick"
                        android:text="@{viewModel.time}"
                        tools:text="20h05"
                        tools:text_font="@{`raleway-medium`}"
                        tools:text_icon="@{viewModel.timeIcon}" />
                </LinearLayout>

                <Button
                    android:id="@+id/new_fact_start_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/blue_button"
                    android:elevation="8dp"
                    android:onClick="@{viewModel.onClickStart}"
...
